--- a/css/style.css
+++ b/css/style.css
@@ -26,32 +26,45 @@
 }
 
 header {
-    padding-top: 25px;
-    padding-right: 25px;
-    padding-bottom: 25px;
-    padding-left: 25px;
-    background-color: black;
+    padding-top: 15px;
+    padding-right: 15px;
+    padding-bottom: 15px;
+    padding-left: 15px;
+    background-color: #CBB9CB;
     text-align: auto;
+}
+
+nav img {
+    width: 100px;
 }
 
 nav a {
     text-decoration: none;
     font-family: "Montserrat", sans-serif;
-    padding-left: 25px;
-    padding-right: 25px;
+    font-size: 23px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 body {
     background-color: antiquewhite;
 }
 
-h1 {
+.zn {
     text-align: center;
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+
+h1 {
     font-family: "Montserrat Bold", sans-serif;
+    font-size: 35px;
 }
 
 .selfPortrait {
     width: 400px;
     margin-left: auto;
     margin-right: auto;
+    padding-bottom: 25px;
 }
+
