--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,5 @@
 * {
-    margin-top: 0px;
-    margin-right: 0px;
-    margin-bottom: 0px;
-    margin-left: 0px;
+    margin: 0px;
 }
 
 .montserrat-regular {
@@ -31,7 +28,6 @@ header {
     padding-bottom: 15px;
     padding-left: 15px;
     background-color: #CBB9CB;
-    text-align: auto;
 }
 
 nav img {
@@ -44,6 +40,7 @@ nav a {
     font-size: 23px;
     padding-left: 15px;
     padding-right: 15px;
+    color: rgb(140, 98, 148);
 }
 
 body {
@@ -65,7 +62,6 @@ h1 {
 h2 {
     font-family: "Montserrat Bold", sans-serif;
     font-size: 25px;
-    padding-top: 5%;
     padding-bottom: 5%;
     text-align: center;
 }
@@ -74,8 +70,11 @@ h3 {
     font-family: "Montserrat Bold", sans-serif;
     font-size: 20px;
     padding-top: 5%;
+    padding-right: 5%;
     padding-bottom: 5%;
-    text-align: center;
+    padding-left: 5%;
+    text-align: justify;
+    background-color: blue;
 }
 
 #selfPortrait {
@@ -93,28 +92,72 @@ h3 {
     margin-bottom: 5%;
     margin-right: 5%;
     align-items: center;
-    flex-wrap:inherit
+    justify-content: space-around;
 }
 
-#inspoContainer {
+#inspoScroll {
     display: flex;
     flex-direction: row;
     overflow-x: scroll;
-    background-color: aquamarine;
-    flex-wrap: wrap;
+    padding-bottom: 10%;
+}
+
+#davidContainer {
+    display: flex;
+    flex-direction: column;
+    padding-right: 5%;
+    padding-left: 5%;
+    text-align: center;
+}
+
+#davidContainer a {
+    text-decoration: none;
+    font-family: "Montserrat Bold", sans-serif;
+    font-size: 25px;
+    color: black;
+}
+
+#amanitaContainer {
+    display: flex;
+    flex-direction: column;
+    padding-right: 5%;
+    padding-left: 5%;
+    text-align: center;
+}
+
+#amanitaContainer a {
+    text-decoration: none;
+    font-family: "Montserrat Bold", sans-serif;
+    font-size: 25px;
+    color: black;
+}
+
+#hiatusContainer {
+    display: flex;
+    flex-direction: column;
+    padding-right: 5%;
+    padding-left: 5%;
+    text-align: center;
+}
+
+#hiatusContainer a {
+    text-decoration: none;
+    font-family: "Montserrat Bold", sans-serif;
+    font-size: 25px;
+    color: black;
 }
 
 .paragraph {
     text-align: justify;
     margin-right: 5%;
     font-family: "Montserrat", sans-serif;
+    max-width: 40%;
 }
 
 .inspoParagraph {
     text-align: justify;
     font-family: "Montserrat", sans-serif;
-    font-size: 12px;
-    width: 30%;
+    font-size: 11px;
 }
 
 footer {
@@ -134,6 +177,15 @@ footer a {
     padding-right: 15px;
 }
 
-.test img {
-    width: 50%;
+.inspoImg img {
+    max-width: 350px;
+    padding-top: 5%;
+    padding-bottom: 5%;
 }
+
+#hiatus {
+    padding-top: 10%;
+    padding-bottom: 10%;
+}
+
+
